cmake_minimum_required(VERSION 3.16)
project(firstApp)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        firstApp
        main.cpp
        chap3.cpp
        dtime.h
        chap4.cpp
        chap5.cpp
        chap6.cpp
        chap8.cpp
        chap9.cpp
        COS1512_Assignment_2.cpp
        chap10.cpp
        chap11.cpp
        dtime.cpp
        Assignment3.cpp
        Assignment3.h
        implimentation.cpp
        chap14.cpp
        Assignment3_COS1511.cpp
        chap15.cpp employee.cpp employee.h employee_implementation.cpp hourlyEmployee.cpp hourlyEmployee.h salariedEmployee.cpp salariedEmployee.h chap17.cpp Assignment4_COS1512.cpp Insurance.h CarInsurance.h Insurance.cpp runInsurance.cpp CarInsurance.cpp dictionary.cpp dictionary.h runDictionary.cpp)
